[gd_scene load_steps=5 format=4 uid="uid://dx1yysfkocu4r"]

[ext_resource type="Texture2D" uid="uid://c0augnk1kilaf" path="res://assets/tilemap-backgrounds_packed.png" id="1_ayjv3"]
[ext_resource type="Script" uid="uid://cxccb8vrh2xx4" path="res://nodes/background.gd" id="1_jr7rw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ayjv3"]
texture = ExtResource("1_ayjv3")
texture_region_size = Vector2i(16, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:3/0 = 0
4:3/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
8:1/0 = 0
7:1/0 = 0
6:1/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
8:3/0 = 0
7:3/0 = 0
6:3/0 = 0
11:0/0 = 0
10:0/0 = 0
9:0/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
11:2/0 = 0
10:2/0 = 0
9:2/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0

[sub_resource type="TileSet" id="TileSet_jr7rw"]
tile_size = Vector2i(16, 18)
sources/0 = SubResource("TileSetAtlasSource_ayjv3")

[node name="TileMapLayer2" type="Node2D"]
script = ExtResource("1_jr7rw")

[node name="bg_one" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+/wQAAAAGAAMAAAD//wQAAAAHAAMAAAAAAAQAAAAIAAMAAAABAAQAAAAGAAMAAAACAAQAAAAHAAMAAAADAAQAAAAIAAMAAAAEAAQAAAAGAAMAAAAFAAQAAAAHAAMAAAAGAAQAAAAIAAMAAAAHAAQAAAAGAAMAAAAIAAQAAAAHAAMAAAAJAAQAAAAIAAMAAAAKAAQAAAAGAAMAAAALAAQAAAAHAAMAAAAMAAQAAAAIAAMAAAANAAQAAAAGAAMAAAAOAAQAAAAHAAMAAAAPAAQAAAAIAAMAAAAQAAQAAAAGAAMAAAARAAQAAAAHAAMAAAASAAQAAAAIAAMAAAATAAQAAAAGAAMAAAAUAAQAAAAHAAMAAAAVAAQAAAAIAAMAAAAWAAQAAAAGAAMAAAAXAAQAAAAHAAMAAAAYAAQAAAAIAAMAAAAZAAQAAAAGAAMAAAAaAAQAAAAHAAMAAAAbAAQAAAAIAAMAAAAWAAUAAAAGAAMAAAAXAAUAAAAHAAMAAAAYAAUAAAAIAAMAAAAZAAUAAAAGAAMAAAAaAAUAAAAHAAMAAAAbAAUAAAAIAAMAAAAcAAUAAAAGAAMAAAAdAAUAAAAHAAMAAAAeAAUAAAAIAAMAAAAfAAUAAAAGAAMAAAAgAAUAAAAHAAMAAAAhAAUAAAAIAAMAAAAcAAQAAAAGAAMAAAAdAAQAAAAHAAMAAAAeAAQAAAAIAAMAAAAfAAQAAAAGAAMAAAAgAAQAAAAHAAMAAAAhAAQAAAAIAAMAAAAQAAUAAAAGAAMAAAARAAUAAAAHAAMAAAASAAUAAAAIAAMAAAATAAUAAAAGAAMAAAAUAAUAAAAHAAMAAAAVAAUAAAAIAAMAAAAKAAUAAAAGAAMAAAALAAUAAAAHAAMAAAAMAAUAAAAIAAMAAAANAAUAAAAGAAMAAAAOAAUAAAAHAAMAAAAPAAUAAAAIAAMAAAAEAAUAAAAGAAMAAAAFAAUAAAAHAAMAAAAGAAUAAAAIAAMAAAAHAAUAAAAGAAMAAAAIAAUAAAAHAAMAAAAJAAUAAAAIAAMAAAD+/wUAAAAGAAMAAAD//wUAAAAHAAMAAAAAAAUAAAAIAAMAAAABAAUAAAAGAAMAAAACAAUAAAAHAAMAAAADAAUAAAAIAAMAAAD+/wYAAAAGAAMAAAD//wYAAAAHAAMAAAAAAAYAAAAIAAMAAAABAAYAAAAGAAMAAAACAAYAAAAHAAMAAAADAAYAAAAIAAMAAAAEAAYAAAAGAAMAAAAFAAYAAAAHAAMAAAAGAAYAAAAIAAMAAAAHAAYAAAAGAAMAAAAIAAYAAAAHAAMAAAAJAAYAAAAIAAMAAAD+/wcAAAAGAAMAAAD//wcAAAAHAAMAAAAAAAcAAAAIAAMAAAABAAcAAAAGAAMAAAACAAcAAAAHAAMAAAADAAcAAAAIAAMAAAD+/wgAAAAGAAMAAAD//wgAAAAHAAMAAAAAAAgAAAAIAAMAAAABAAgAAAAGAAMAAAACAAgAAAAHAAMAAAADAAgAAAAIAAMAAAD+/wkAAAAGAAMAAAD//wkAAAAHAAMAAAAAAAkAAAAIAAMAAAABAAkAAAAGAAMAAAACAAkAAAAHAAMAAAADAAkAAAAIAAMAAAD+/woAAAAGAAMAAAD//woAAAAHAAMAAAAAAAoAAAAIAAMAAAABAAoAAAAGAAMAAAACAAoAAAAHAAMAAAADAAoAAAAIAAMAAAAEAAoAAAAGAAMAAAAFAAoAAAAHAAMAAAAGAAoAAAAIAAMAAAAHAAoAAAAGAAMAAAAIAAoAAAAHAAMAAAAJAAoAAAAIAAMAAAAEAAkAAAAGAAMAAAAFAAkAAAAHAAMAAAAGAAkAAAAIAAMAAAAHAAkAAAAGAAMAAAAIAAkAAAAHAAMAAAAJAAkAAAAIAAMAAAAKAAkAAAAGAAMAAAALAAkAAAAHAAMAAAAMAAkAAAAIAAMAAAANAAkAAAAGAAMAAAAOAAkAAAAHAAMAAAAPAAkAAAAIAAMAAAAQAAkAAAAGAAMAAAARAAkAAAAHAAMAAAASAAkAAAAIAAMAAAATAAkAAAAGAAMAAAAUAAkAAAAHAAMAAAAVAAkAAAAIAAMAAAAWAAkAAAAGAAMAAAAXAAkAAAAHAAMAAAAYAAkAAAAIAAMAAAAZAAkAAAAGAAMAAAAaAAkAAAAHAAMAAAAbAAkAAAAIAAMAAAAcAAkAAAAGAAMAAAAdAAkAAAAHAAMAAAAeAAkAAAAIAAMAAAAfAAkAAAAGAAMAAAAgAAkAAAAHAAMAAAAhAAkAAAAIAAMAAAAcAAgAAAAGAAMAAAAdAAgAAAAHAAMAAAAeAAgAAAAIAAMAAAAfAAgAAAAGAAMAAAAgAAgAAAAHAAMAAAAhAAgAAAAIAAMAAAAcAAcAAAAGAAMAAAAdAAcAAAAHAAMAAAAeAAcAAAAIAAMAAAAfAAcAAAAGAAMAAAAgAAcAAAAHAAMAAAAhAAcAAAAIAAMAAAAcAAYAAAAGAAMAAAAdAAYAAAAHAAMAAAAeAAYAAAAIAAMAAAAfAAYAAAAGAAMAAAAgAAYAAAAHAAMAAAAhAAYAAAAIAAMAAAAWAAYAAAAGAAMAAAAXAAYAAAAHAAMAAAAYAAYAAAAIAAMAAAAZAAYAAAAGAAMAAAAaAAYAAAAHAAMAAAAbAAYAAAAIAAMAAAAQAAYAAAAGAAMAAAARAAYAAAAHAAMAAAASAAYAAAAIAAMAAAATAAYAAAAGAAMAAAAUAAYAAAAHAAMAAAAVAAYAAAAIAAMAAAAKAAYAAAAGAAMAAAALAAYAAAAHAAMAAAAMAAYAAAAIAAMAAAANAAYAAAAGAAMAAAAOAAYAAAAHAAMAAAAPAAYAAAAIAAMAAAAEAAcAAAAGAAMAAAAFAAcAAAAHAAMAAAAGAAcAAAAIAAMAAAAHAAcAAAAGAAMAAAAIAAcAAAAHAAMAAAAJAAcAAAAIAAMAAAAEAAgAAAAGAAMAAAAFAAgAAAAHAAMAAAAGAAgAAAAIAAMAAAAHAAgAAAAGAAMAAAAIAAgAAAAHAAMAAAAJAAgAAAAIAAMAAAAKAAoAAAAGAAMAAAALAAoAAAAHAAMAAAAMAAoAAAAIAAMAAAANAAoAAAAGAAMAAAAOAAoAAAAHAAMAAAAPAAoAAAAIAAMAAAAQAAoAAAAGAAMAAAARAAoAAAAHAAMAAAASAAoAAAAIAAMAAAATAAoAAAAGAAMAAAAUAAoAAAAHAAMAAAAVAAoAAAAIAAMAAAAWAAoAAAAGAAMAAAAXAAoAAAAHAAMAAAAYAAoAAAAIAAMAAAAZAAoAAAAGAAMAAAAaAAoAAAAHAAMAAAAbAAoAAAAIAAMAAAAcAAoAAAAGAAMAAAAdAAoAAAAHAAMAAAAeAAoAAAAIAAMAAAAfAAoAAAAGAAMAAAAgAAoAAAAHAAMAAAAhAAoAAAAIAAMAAAAWAAgAAAAGAAMAAAAXAAgAAAAHAAMAAAAYAAgAAAAIAAMAAAAZAAgAAAAGAAMAAAAaAAgAAAAHAAMAAAAbAAgAAAAIAAMAAAAWAAcAAAAGAAMAAAAXAAcAAAAHAAMAAAAYAAcAAAAIAAMAAAAZAAcAAAAGAAMAAAAaAAcAAAAHAAMAAAAbAAcAAAAIAAMAAAAQAAcAAAAGAAMAAAARAAcAAAAHAAMAAAASAAcAAAAIAAMAAAATAAcAAAAGAAMAAAAUAAcAAAAHAAMAAAAVAAcAAAAIAAMAAAAKAAcAAAAGAAMAAAALAAcAAAAHAAMAAAAMAAcAAAAIAAMAAAANAAcAAAAGAAMAAAAOAAcAAAAHAAMAAAAPAAcAAAAIAAMAAAAKAAgAAAAGAAMAAAALAAgAAAAHAAMAAAAMAAgAAAAIAAMAAAANAAgAAAAGAAMAAAAOAAgAAAAHAAMAAAAPAAgAAAAIAAMAAAAQAAgAAAAGAAMAAAARAAgAAAAHAAMAAAASAAgAAAAIAAMAAAATAAgAAAAGAAMAAAAUAAgAAAAHAAMAAAAVAAgAAAAIAAMAAAD+/wMAAAAGAAIAAAD//wMAAAAHAAIAAAAAAAMAAAAIAAIAAAABAAMAAAAGAAIAAAACAAMAAAAHAAIAAAADAAMAAAAIAAIAAAAEAAMAAAAGAAIAAAAFAAMAAAAHAAIAAAAGAAMAAAAIAAIAAAAHAAMAAAAGAAIAAAAIAAMAAAAHAAIAAAAJAAMAAAAIAAIAAAAKAAMAAAAGAAIAAAALAAMAAAAHAAIAAAAMAAMAAAAIAAIAAAANAAMAAAAGAAIAAAAOAAMAAAAHAAIAAAAPAAMAAAAIAAIAAAAQAAMAAAAGAAIAAAARAAMAAAAHAAIAAAASAAMAAAAIAAIAAAATAAMAAAAGAAIAAAAUAAMAAAAHAAIAAAAVAAMAAAAIAAIAAAAWAAMAAAAGAAIAAAAXAAMAAAAHAAIAAAAYAAMAAAAIAAIAAAAZAAMAAAAGAAIAAAAaAAMAAAAHAAIAAAAbAAMAAAAIAAIAAAAcAAMAAAAGAAIAAAAdAAMAAAAHAAIAAAAeAAMAAAAIAAIAAAAfAAMAAAAGAAIAAAAgAAMAAAAHAAIAAAAhAAMAAAAIAAIAAAD+/wIAAAAGAAEAAAD//wIAAAAHAAEAAAAAAAIAAAAIAAEAAAABAAIAAAAGAAEAAAACAAIAAAAHAAEAAAADAAIAAAAIAAEAAAAEAAIAAAAGAAEAAAAFAAIAAAAHAAEAAAAGAAIAAAAIAAEAAAAHAAIAAAAGAAEAAAAIAAIAAAAHAAEAAAAJAAIAAAAIAAEAAAAKAAIAAAAGAAEAAAALAAIAAAAHAAEAAAAMAAIAAAAIAAEAAAANAAIAAAAGAAEAAAAOAAIAAAAHAAEAAAAPAAIAAAAIAAEAAAAQAAIAAAAGAAEAAAARAAIAAAAHAAEAAAASAAIAAAAIAAEAAAATAAIAAAAGAAEAAAAUAAIAAAAHAAEAAAAVAAIAAAAIAAEAAAAWAAIAAAAGAAEAAAAXAAIAAAAHAAEAAAAYAAIAAAAIAAEAAAAZAAIAAAAGAAEAAAAaAAIAAAAHAAEAAAAbAAIAAAAIAAEAAAAcAAIAAAAGAAEAAAAdAAIAAAAHAAEAAAAeAAIAAAAIAAEAAAAfAAIAAAAGAAEAAAAgAAIAAAAHAAEAAAAhAAIAAAAIAAEAAAD+/wEAAAAGAAAAAAD//wEAAAAHAAAAAAAAAAEAAAAIAAAAAAABAAEAAAAGAAAAAAACAAEAAAAHAAAAAAADAAEAAAAIAAAAAAD+/wAAAAAGAAAAAAD//wAAAAAHAAAAAAAAAAAAAAAIAAAAAAABAAAAAAAGAAAAAAACAAAAAAAHAAAAAAADAAAAAAAIAAAAAAAEAAAAAAAGAAAAAAAFAAAAAAAHAAAAAAAGAAAAAAAIAAAAAAAHAAAAAAAGAAAAAAAIAAAAAAAHAAAAAAAJAAAAAAAIAAAAAAAEAP//AAAGAAAAAAAFAP//AAAHAAAAAAAGAP//AAAIAAAAAAAHAP//AAAGAAAAAAAIAP//AAAHAAAAAAAJAP//AAAIAAAAAAAKAP//AAAGAAAAAAALAP//AAAHAAAAAAAMAP//AAAIAAAAAAANAP//AAAGAAAAAAAOAP//AAAHAAAAAAAPAP//AAAIAAAAAAAQAP//AAAGAAAAAAARAP//AAAHAAAAAAASAP//AAAIAAAAAAATAP//AAAGAAAAAAAUAP//AAAHAAAAAAAVAP//AAAIAAAAAAAWAP//AAAGAAAAAAAXAP//AAAHAAAAAAAYAP//AAAIAAAAAAAZAP//AAAGAAAAAAAaAP//AAAHAAAAAAAbAP//AAAIAAAAAAAWAAAAAAAGAAAAAAAXAAAAAAAHAAAAAAAYAAAAAAAIAAAAAAAZAAAAAAAGAAAAAAAaAAAAAAAHAAAAAAAbAAAAAAAIAAAAAAAcAAAAAAAGAAAAAAAdAAAAAAAHAAAAAAAeAAAAAAAIAAAAAAAfAAAAAAAGAAAAAAAgAAAAAAAHAAAAAAAhAAAAAAAIAAAAAAAcAAEAAAAGAAAAAAAdAAEAAAAHAAAAAAAeAAEAAAAIAAAAAAAfAAEAAAAGAAAAAAAgAAEAAAAHAAAAAAAhAAEAAAAIAAAAAAAWAAEAAAAGAAAAAAAXAAEAAAAHAAAAAAAYAAEAAAAIAAAAAAAZAAEAAAAGAAAAAAAaAAEAAAAHAAAAAAAbAAEAAAAIAAAAAAAQAAEAAAAGAAAAAAARAAEAAAAHAAAAAAASAAEAAAAIAAAAAAATAAEAAAAGAAAAAAAUAAEAAAAHAAAAAAAVAAEAAAAIAAAAAAAKAAEAAAAGAAAAAAALAAEAAAAHAAAAAAAMAAEAAAAIAAAAAAANAAEAAAAGAAAAAAAOAAEAAAAHAAAAAAAPAAEAAAAIAAAAAAAKAAAAAAAGAAAAAAALAAAAAAAHAAAAAAAMAAAAAAAIAAAAAAANAAAAAAAGAAAAAAAOAAAAAAAHAAAAAAAPAAAAAAAIAAAAAAAEAAEAAAAGAAAAAAAFAAEAAAAHAAAAAAAGAAEAAAAIAAAAAAAHAAEAAAAGAAAAAAAIAAEAAAAHAAAAAAAJAAEAAAAIAAAAAAAQAAAAAAAGAAAAAAARAAAAAAAHAAAAAAASAAAAAAAIAAAAAAATAAAAAAAGAAAAAAAUAAAAAAAHAAAAAAAVAAAAAAAIAAAAAAAcAP//AAAGAAAAAAAdAP//AAAHAAAAAAAeAP//AAAIAAAAAAAfAP//AAAGAAAAAAAgAP//AAAHAAAAAAAhAP//AAAIAAAAAAD+////AAAGAAAAAAD/////AAAHAAAAAAAAAP//AAAIAAAAAAABAP//AAAGAAAAAAACAP//AAAHAAAAAAADAP//AAAIAAAAAAA=")
tile_set = SubResource("TileSet_jr7rw")

[node name="edge_one" type="VisibleOnScreenNotifier2D" parent="bg_one"]
position = Vector2(543.5, 12)
scale = Vector2(0.0499999, 1.2)

[node name="bg_two" type="TileMapLayer" parent="."]
position = Vector2(576, 0)
tile_map_data = PackedByteArray("AAD+/wQAAAAGAAMAAAD//wQAAAAHAAMAAAAAAAQAAAAIAAMAAAABAAQAAAAGAAMAAAACAAQAAAAHAAMAAAADAAQAAAAIAAMAAAAEAAQAAAAGAAMAAAAFAAQAAAAHAAMAAAAGAAQAAAAIAAMAAAAHAAQAAAAGAAMAAAAIAAQAAAAHAAMAAAAJAAQAAAAIAAMAAAAKAAQAAAAGAAMAAAALAAQAAAAHAAMAAAAMAAQAAAAIAAMAAAANAAQAAAAGAAMAAAAOAAQAAAAHAAMAAAAPAAQAAAAIAAMAAAAQAAQAAAAGAAMAAAARAAQAAAAHAAMAAAASAAQAAAAIAAMAAAATAAQAAAAGAAMAAAAUAAQAAAAHAAMAAAAVAAQAAAAIAAMAAAAWAAQAAAAGAAMAAAAXAAQAAAAHAAMAAAAYAAQAAAAIAAMAAAAZAAQAAAAGAAMAAAAaAAQAAAAHAAMAAAAbAAQAAAAIAAMAAAAWAAUAAAAGAAMAAAAXAAUAAAAHAAMAAAAYAAUAAAAIAAMAAAAZAAUAAAAGAAMAAAAaAAUAAAAHAAMAAAAbAAUAAAAIAAMAAAAcAAUAAAAGAAMAAAAdAAUAAAAHAAMAAAAeAAUAAAAIAAMAAAAfAAUAAAAGAAMAAAAgAAUAAAAHAAMAAAAhAAUAAAAIAAMAAAAcAAQAAAAGAAMAAAAdAAQAAAAHAAMAAAAeAAQAAAAIAAMAAAAfAAQAAAAGAAMAAAAgAAQAAAAHAAMAAAAhAAQAAAAIAAMAAAAQAAUAAAAGAAMAAAARAAUAAAAHAAMAAAASAAUAAAAIAAMAAAATAAUAAAAGAAMAAAAUAAUAAAAHAAMAAAAVAAUAAAAIAAMAAAAKAAUAAAAGAAMAAAALAAUAAAAHAAMAAAAMAAUAAAAIAAMAAAANAAUAAAAGAAMAAAAOAAUAAAAHAAMAAAAPAAUAAAAIAAMAAAAEAAUAAAAGAAMAAAAFAAUAAAAHAAMAAAAGAAUAAAAIAAMAAAAHAAUAAAAGAAMAAAAIAAUAAAAHAAMAAAAJAAUAAAAIAAMAAAD+/wUAAAAGAAMAAAD//wUAAAAHAAMAAAAAAAUAAAAIAAMAAAABAAUAAAAGAAMAAAACAAUAAAAHAAMAAAADAAUAAAAIAAMAAAD+/wYAAAAGAAMAAAD//wYAAAAHAAMAAAAAAAYAAAAIAAMAAAABAAYAAAAGAAMAAAACAAYAAAAHAAMAAAADAAYAAAAIAAMAAAAEAAYAAAAGAAMAAAAFAAYAAAAHAAMAAAAGAAYAAAAIAAMAAAAHAAYAAAAGAAMAAAAIAAYAAAAHAAMAAAAJAAYAAAAIAAMAAAD+/wcAAAAGAAMAAAD//wcAAAAHAAMAAAAAAAcAAAAIAAMAAAABAAcAAAAGAAMAAAACAAcAAAAHAAMAAAADAAcAAAAIAAMAAAD+/wgAAAAGAAMAAAD//wgAAAAHAAMAAAAAAAgAAAAIAAMAAAABAAgAAAAGAAMAAAACAAgAAAAHAAMAAAADAAgAAAAIAAMAAAD+/wkAAAAGAAMAAAD//wkAAAAHAAMAAAAAAAkAAAAIAAMAAAABAAkAAAAGAAMAAAACAAkAAAAHAAMAAAADAAkAAAAIAAMAAAD+/woAAAAGAAMAAAD//woAAAAHAAMAAAAAAAoAAAAIAAMAAAABAAoAAAAGAAMAAAACAAoAAAAHAAMAAAADAAoAAAAIAAMAAAAEAAoAAAAGAAMAAAAFAAoAAAAHAAMAAAAGAAoAAAAIAAMAAAAHAAoAAAAGAAMAAAAIAAoAAAAHAAMAAAAJAAoAAAAIAAMAAAAEAAkAAAAGAAMAAAAFAAkAAAAHAAMAAAAGAAkAAAAIAAMAAAAHAAkAAAAGAAMAAAAIAAkAAAAHAAMAAAAJAAkAAAAIAAMAAAAKAAkAAAAGAAMAAAALAAkAAAAHAAMAAAAMAAkAAAAIAAMAAAANAAkAAAAGAAMAAAAOAAkAAAAHAAMAAAAPAAkAAAAIAAMAAAAQAAkAAAAGAAMAAAARAAkAAAAHAAMAAAASAAkAAAAIAAMAAAATAAkAAAAGAAMAAAAUAAkAAAAHAAMAAAAVAAkAAAAIAAMAAAAWAAkAAAAGAAMAAAAXAAkAAAAHAAMAAAAYAAkAAAAIAAMAAAAZAAkAAAAGAAMAAAAaAAkAAAAHAAMAAAAbAAkAAAAIAAMAAAAcAAkAAAAGAAMAAAAdAAkAAAAHAAMAAAAeAAkAAAAIAAMAAAAfAAkAAAAGAAMAAAAgAAkAAAAHAAMAAAAhAAkAAAAIAAMAAAAcAAgAAAAGAAMAAAAdAAgAAAAHAAMAAAAeAAgAAAAIAAMAAAAfAAgAAAAGAAMAAAAgAAgAAAAHAAMAAAAhAAgAAAAIAAMAAAAcAAcAAAAGAAMAAAAdAAcAAAAHAAMAAAAeAAcAAAAIAAMAAAAfAAcAAAAGAAMAAAAgAAcAAAAHAAMAAAAhAAcAAAAIAAMAAAAcAAYAAAAGAAMAAAAdAAYAAAAHAAMAAAAeAAYAAAAIAAMAAAAfAAYAAAAGAAMAAAAgAAYAAAAHAAMAAAAhAAYAAAAIAAMAAAAWAAYAAAAGAAMAAAAXAAYAAAAHAAMAAAAYAAYAAAAIAAMAAAAZAAYAAAAGAAMAAAAaAAYAAAAHAAMAAAAbAAYAAAAIAAMAAAAQAAYAAAAGAAMAAAARAAYAAAAHAAMAAAASAAYAAAAIAAMAAAATAAYAAAAGAAMAAAAUAAYAAAAHAAMAAAAVAAYAAAAIAAMAAAAKAAYAAAAGAAMAAAALAAYAAAAHAAMAAAAMAAYAAAAIAAMAAAANAAYAAAAGAAMAAAAOAAYAAAAHAAMAAAAPAAYAAAAIAAMAAAAEAAcAAAAGAAMAAAAFAAcAAAAHAAMAAAAGAAcAAAAIAAMAAAAHAAcAAAAGAAMAAAAIAAcAAAAHAAMAAAAJAAcAAAAIAAMAAAAEAAgAAAAGAAMAAAAFAAgAAAAHAAMAAAAGAAgAAAAIAAMAAAAHAAgAAAAGAAMAAAAIAAgAAAAHAAMAAAAJAAgAAAAIAAMAAAAKAAoAAAAGAAMAAAALAAoAAAAHAAMAAAAMAAoAAAAIAAMAAAANAAoAAAAGAAMAAAAOAAoAAAAHAAMAAAAPAAoAAAAIAAMAAAAQAAoAAAAGAAMAAAARAAoAAAAHAAMAAAASAAoAAAAIAAMAAAATAAoAAAAGAAMAAAAUAAoAAAAHAAMAAAAVAAoAAAAIAAMAAAAWAAoAAAAGAAMAAAAXAAoAAAAHAAMAAAAYAAoAAAAIAAMAAAAZAAoAAAAGAAMAAAAaAAoAAAAHAAMAAAAbAAoAAAAIAAMAAAAcAAoAAAAGAAMAAAAdAAoAAAAHAAMAAAAeAAoAAAAIAAMAAAAfAAoAAAAGAAMAAAAgAAoAAAAHAAMAAAAhAAoAAAAIAAMAAAAWAAgAAAAGAAMAAAAXAAgAAAAHAAMAAAAYAAgAAAAIAAMAAAAZAAgAAAAGAAMAAAAaAAgAAAAHAAMAAAAbAAgAAAAIAAMAAAAWAAcAAAAGAAMAAAAXAAcAAAAHAAMAAAAYAAcAAAAIAAMAAAAZAAcAAAAGAAMAAAAaAAcAAAAHAAMAAAAbAAcAAAAIAAMAAAAQAAcAAAAGAAMAAAARAAcAAAAHAAMAAAASAAcAAAAIAAMAAAATAAcAAAAGAAMAAAAUAAcAAAAHAAMAAAAVAAcAAAAIAAMAAAAKAAcAAAAGAAMAAAALAAcAAAAHAAMAAAAMAAcAAAAIAAMAAAANAAcAAAAGAAMAAAAOAAcAAAAHAAMAAAAPAAcAAAAIAAMAAAAKAAgAAAAGAAMAAAALAAgAAAAHAAMAAAAMAAgAAAAIAAMAAAANAAgAAAAGAAMAAAAOAAgAAAAHAAMAAAAPAAgAAAAIAAMAAAAQAAgAAAAGAAMAAAARAAgAAAAHAAMAAAASAAgAAAAIAAMAAAATAAgAAAAGAAMAAAAUAAgAAAAHAAMAAAAVAAgAAAAIAAMAAAD+/wMAAAAGAAIAAAD//wMAAAAHAAIAAAAAAAMAAAAIAAIAAAABAAMAAAAGAAIAAAACAAMAAAAHAAIAAAADAAMAAAAIAAIAAAAEAAMAAAAGAAIAAAAFAAMAAAAHAAIAAAAGAAMAAAAIAAIAAAAHAAMAAAAGAAIAAAAIAAMAAAAHAAIAAAAJAAMAAAAIAAIAAAAKAAMAAAAGAAIAAAALAAMAAAAHAAIAAAAMAAMAAAAIAAIAAAANAAMAAAAGAAIAAAAOAAMAAAAHAAIAAAAPAAMAAAAIAAIAAAAQAAMAAAAGAAIAAAARAAMAAAAHAAIAAAASAAMAAAAIAAIAAAATAAMAAAAGAAIAAAAUAAMAAAAHAAIAAAAVAAMAAAAIAAIAAAAWAAMAAAAGAAIAAAAXAAMAAAAHAAIAAAAYAAMAAAAIAAIAAAAZAAMAAAAGAAIAAAAaAAMAAAAHAAIAAAAbAAMAAAAIAAIAAAAcAAMAAAAGAAIAAAAdAAMAAAAHAAIAAAAeAAMAAAAIAAIAAAAfAAMAAAAGAAIAAAAgAAMAAAAHAAIAAAAhAAMAAAAIAAIAAAD+/wIAAAAGAAEAAAD//wIAAAAHAAEAAAAAAAIAAAAIAAEAAAABAAIAAAAGAAEAAAACAAIAAAAHAAEAAAADAAIAAAAIAAEAAAAEAAIAAAAGAAEAAAAFAAIAAAAHAAEAAAAGAAIAAAAIAAEAAAAHAAIAAAAGAAEAAAAIAAIAAAAHAAEAAAAJAAIAAAAIAAEAAAAKAAIAAAAGAAEAAAALAAIAAAAHAAEAAAAMAAIAAAAIAAEAAAANAAIAAAAGAAEAAAAOAAIAAAAHAAEAAAAPAAIAAAAIAAEAAAAQAAIAAAAGAAEAAAARAAIAAAAHAAEAAAASAAIAAAAIAAEAAAATAAIAAAAGAAEAAAAUAAIAAAAHAAEAAAAVAAIAAAAIAAEAAAAWAAIAAAAGAAEAAAAXAAIAAAAHAAEAAAAYAAIAAAAIAAEAAAAZAAIAAAAGAAEAAAAaAAIAAAAHAAEAAAAbAAIAAAAIAAEAAAAcAAIAAAAGAAEAAAAdAAIAAAAHAAEAAAAeAAIAAAAIAAEAAAAfAAIAAAAGAAEAAAAgAAIAAAAHAAEAAAAhAAIAAAAIAAEAAAD+/wEAAAAGAAAAAAD//wEAAAAHAAAAAAAAAAEAAAAIAAAAAAABAAEAAAAGAAAAAAACAAEAAAAHAAAAAAADAAEAAAAIAAAAAAD+/wAAAAAGAAAAAAD//wAAAAAHAAAAAAAAAAAAAAAIAAAAAAABAAAAAAAGAAAAAAACAAAAAAAHAAAAAAADAAAAAAAIAAAAAAAEAAAAAAAGAAAAAAAFAAAAAAAHAAAAAAAGAAAAAAAIAAAAAAAHAAAAAAAGAAAAAAAIAAAAAAAHAAAAAAAJAAAAAAAIAAAAAAAEAP//AAAGAAAAAAAFAP//AAAHAAAAAAAGAP//AAAIAAAAAAAHAP//AAAGAAAAAAAIAP//AAAHAAAAAAAJAP//AAAIAAAAAAAKAP//AAAGAAAAAAALAP//AAAHAAAAAAAMAP//AAAIAAAAAAANAP//AAAGAAAAAAAOAP//AAAHAAAAAAAPAP//AAAIAAAAAAAQAP//AAAGAAAAAAARAP//AAAHAAAAAAASAP//AAAIAAAAAAATAP//AAAGAAAAAAAUAP//AAAHAAAAAAAVAP//AAAIAAAAAAAWAP//AAAGAAAAAAAXAP//AAAHAAAAAAAYAP//AAAIAAAAAAAZAP//AAAGAAAAAAAaAP//AAAHAAAAAAAbAP//AAAIAAAAAAAWAAAAAAAGAAAAAAAXAAAAAAAHAAAAAAAYAAAAAAAIAAAAAAAZAAAAAAAGAAAAAAAaAAAAAAAHAAAAAAAbAAAAAAAIAAAAAAAcAAAAAAAGAAAAAAAdAAAAAAAHAAAAAAAeAAAAAAAIAAAAAAAfAAAAAAAGAAAAAAAgAAAAAAAHAAAAAAAhAAAAAAAIAAAAAAAcAAEAAAAGAAAAAAAdAAEAAAAHAAAAAAAeAAEAAAAIAAAAAAAfAAEAAAAGAAAAAAAgAAEAAAAHAAAAAAAhAAEAAAAIAAAAAAAWAAEAAAAGAAAAAAAXAAEAAAAHAAAAAAAYAAEAAAAIAAAAAAAZAAEAAAAGAAAAAAAaAAEAAAAHAAAAAAAbAAEAAAAIAAAAAAAQAAEAAAAGAAAAAAARAAEAAAAHAAAAAAASAAEAAAAIAAAAAAATAAEAAAAGAAAAAAAUAAEAAAAHAAAAAAAVAAEAAAAIAAAAAAAKAAEAAAAGAAAAAAALAAEAAAAHAAAAAAAMAAEAAAAIAAAAAAANAAEAAAAGAAAAAAAOAAEAAAAHAAAAAAAPAAEAAAAIAAAAAAAKAAAAAAAGAAAAAAALAAAAAAAHAAAAAAAMAAAAAAAIAAAAAAANAAAAAAAGAAAAAAAOAAAAAAAHAAAAAAAPAAAAAAAIAAAAAAAEAAEAAAAGAAAAAAAFAAEAAAAHAAAAAAAGAAEAAAAIAAAAAAAHAAEAAAAGAAAAAAAIAAEAAAAHAAAAAAAJAAEAAAAIAAAAAAAQAAAAAAAGAAAAAAARAAAAAAAHAAAAAAASAAAAAAAIAAAAAAATAAAAAAAGAAAAAAAUAAAAAAAHAAAAAAAVAAAAAAAIAAAAAAAcAP//AAAGAAAAAAAdAP//AAAHAAAAAAAeAP//AAAIAAAAAAAfAP//AAAGAAAAAAAgAP//AAAHAAAAAAAhAP//AAAIAAAAAAD+////AAAGAAAAAAD/////AAAHAAAAAAAAAP//AAAIAAAAAAABAP//AAAGAAAAAAACAP//AAAHAAAAAAADAP//AAAIAAAAAAA=")
tile_set = SubResource("TileSet_jr7rw")

[node name="edge_two" type="VisibleOnScreenNotifier2D" parent="bg_two"]
position = Vector2(543.5, 12)
scale = Vector2(0.0499999, 1.2)

[connection signal="screen_exited" from="bg_one/edge_one" to="." method="_on_edge_one_screen_exited"]
[connection signal="screen_exited" from="bg_two/edge_two" to="." method="_on_edge_two_screen_exited"]
